--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.562.0",
+    "moment": "^2.30.1",
     "motion": "^12.29.0",
     "next": "16.1.4",
+    "next-themes": "^0.4.6",
     "openai": "^6.16.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
   },
